Minor spacing fix

--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ hr {
 .videoCard img {
     width: 345px;
     height: 180px;
+    display: block;
 }
 
 .videoCard div {
